--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
          </div>
 
          <div class="section-4">
-            <div class="section-4-left">
-               <h1>Call to action! It's time!</h1>
-               <p>
-                  Sign up for our product by clicking that button right over
-                  there!
-               </p>
-            </div>
-            <div class="section-4-right">
-               <button>Sign up</button>
+            <div class="section-4-container">
+               <div class="section-4-left">
+                  <h1>Call to action! It's time!</h1>
+                  <p>
+                     Sign up for our product by clicking that button right over
+                     there!
+                  </p>
+               </div>
+               <div class="section-4-right">
+                  <button>Sign up</button>
+               </div>
             </div>
          </div>
       </div>
